<resources>
    <string name="app_name">ImcApp</string>
    <string name="texto_etiqueta_peso">Proporcione el peso en kilogramos:</string><!--Cuadro de texto no editable en el que se pide el peso -->
    <string name="texto_etiqueta_estatura">Proporcione la estaura en metros:</string><!--Cuadro de texto no editable en el que se pide la estatura -->
    <string name="texto_boton_calcular">Calcular</string><!--Leyenda que aparece en el boton para calcular el IMC -->
    <string name="texto_boton_limpiar">Limpiar</string><!--Leyenda en el boton para limpiar el los cuadros de texto -->
    <string name="texto_etiqueta_resultado">El Indice de la Masa Corporal (IMC) es:</string><!--cuadro de texto no editable donde arroja el resultado -->

</resources>
